--- a/api/templates/details.html
+++ b/api/templates/details.html
@@ -28,6 +28,11 @@
                 font-size: 3.5rem;
             }
         }
+        canvas {
+            -moz-user-select: none;
+            -webkit-user-select: none;
+            -ms-user-select: none;
+	    }
     </style>
 </head>
 
@@ -37,6 +42,9 @@
     </div>
 
     <div class="container">
+        <div id="bars" style="width: 75%;">
+		    <canvas id="canvas"></canvas>
+	    </div>
         <table class="table table-striped">
             <thead>
                 <tr>
@@ -64,6 +72,49 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
+    <script>
+        var barChartData = {
+			labels: [{% for key, value in summary.frequency.items() %} {{ key }},  {% endfor %}],
+			datasets: [{
+				label: 'Open',
+				backgroundColor: '#ff0000',
+				borderWidth: 1,
+				data: [
+				    {% for key, value in summary.status.items() %}
+					{{ summary.status[key]['open'] }},
+					{% endfor %}
+				]
+			}, {
+				label: 'Closed',
+				backgroundColor: '#0000ff',
+				borderWidth: 1,
+				data: [
+				    {% for key, value in summary.status.items() %}
+					{{ summary.status[key]['closed'] }},
+					{% endfor %}
+				]
+			}]
+		};
+        window.onload = function() {
+            var ctx = document.getElementById('canvas').getContext('2d');
+            new Chart(ctx, {
+                type: 'bar',
+                data: barChartData,
+                options: {
+                    responsive: true,
+                    legend: {
+                        position: 'top',
+                    },
+                    title: {
+                        display: true,
+                        text: 'Chart.js Bar Chart'
+                    }
+                }
+            });
+        };
+
+    </script>
 </body>
 
 </html>
